--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notes-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/MKortmann/Health-Tracker",
   "dependencies": {
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
