--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notes-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/MKortmann/Notes-Tracker",
+  "homepage": "https://mkortmann.github.io/Notes-Tracker/",
   "dependencies": {
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
