--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
+    "firebase": "^7.3.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-firebase": "^2.2.8",
     "react-scripts": "3.2.0",
     "typeface-roboto": "0.0.75"
   },
